agrega correo gmail

--- a/index.html
+++ b/index.html
@@ -120,8 +120,10 @@
                 <h5 class="pb-3">
                     Correo electronico</h5>
                 <p class="mbr-text">
-                    <a class="text-primary" href="https://mobirise.com/">contador@contahoy.com.mx</a>
-                    <br><a class="text-primary" href="https://mobirise.com/mobirise-free-win.zip">facturación@contahoy.com.mx</a></p>
+                    <a class="text-primary" href="mailto:contador@contahoy.com.mx">contador@contahoy.com.mx</a>
+                    <br><a class="text-primary" href="mailto:facturacion@contahoy.com.mx">facturacion@contahoy.com.mx</a>
+                    <br><a class="text-primary" href="mailto:contacto.contahoy@gmail.com">contacto.contahoy@gmail.com</a>
+                </p>
             </div>
         </div>
         <div class="footer-lower">
