--- a/index.html
+++ b/index.html
@@ -140,14 +140,29 @@
                 </div>
                 <div class="col-md-6">
                     <div class="social-list align-right">
-                        <!-- <div class="soc-item">
+                        <div class="soc-item">
                             <a href="https://twitter.com/contahoy" target="_blank">
                                 <span class="mbr-iconfont mbr-iconfont-social socicon-twitter socicon" media-simple="true"></span>
                             </a>
-                        </div> -->
+                        </div>     
+                        <div class="soc-item">
+                            <a href="https://www.instagram.com/contahoy" target="_blank">
+                                <span class="mbr-iconfont mbr-iconfont-social socicon-instagram socicon" media-simple="true"></span>
+                            </a>
+                        </div>
+                        <div class="soc-item">
+                            <a href="https://www.linkedin.com/in/contahoy-1714271b0/" target="_blank">
+                                <span class="mbr-iconfont mbr-iconfont-social socicon-linkedin socicon" media-simple="true"></span>
+                            </a>
+                        </div>
                         <div class="soc-item">
                             <a href="https://www.facebook.com/contahoy/" target="_blank">
                                 <span class="mbr-iconfont mbr-iconfont-social socicon-facebook socicon" media-simple="true"></span>
+                            </a>
+                        </div>
+                        <div class="soc-item">
+                            <a href="https://api.whatsapp.com/send?phone=+5212381090735&text=Me%20puede%20brindar%20m%C3%A1s%20informaci%C3%B3n" target="_blank">
+                                <span class="mbr-iconfont mbr-iconfont-social socicon-whatsapp socicon" media-simple="true"></span>
                             </a>
                         </div>
                     </div>
