add twitter feed

--- a/about.html
+++ b/about.html
@@ -128,11 +128,6 @@
 </section>
 
 <section class="cid-qtGrieUXZC" id="footer2-1b" data-rv-view="111">
-
-    
-
-    
-
     <div class="container">
         <div class="media-container-row content mbr-white">
             <div class="col-12 col-md-3 mbr-fonts-style display-7">
@@ -164,14 +159,35 @@
                 </div>
                 <div class="col-md-6">
                     <div class="social-list align-right">
-                        <!-- <div class="soc-item">
+                        <div class="soc-item">
                             <a href="https://twitter.com/contahoy" target="_blank">
-                                <span class="mbr-iconfont mbr-iconfont-social socicon-twitter socicon" media-simple="true"></span>
+                                <span class="mbr-iconfont mbr-iconfont-social socicon-twitter socicon"
+                                    media-simple="true"></span>
                             </a>
-                        </div> -->
+                        </div>
+                        <div class="soc-item">
+                            <a href="https://www.instagram.com/contahoy" target="_blank">
+                                <span class="mbr-iconfont mbr-iconfont-social socicon-instagram socicon"
+                                    media-simple="true"></span>
+                            </a>
+                        </div>
+                        <div class="soc-item">
+                            <a href="https://www.linkedin.com/in/contahoy-1714271b0/" target="_blank">
+                                <span class="mbr-iconfont mbr-iconfont-social socicon-linkedin socicon"
+                                    media-simple="true"></span>
+                            </a>
+                        </div>
                         <div class="soc-item">
                             <a href="https://www.facebook.com/contahoy/" target="_blank">
-                                <span class="mbr-iconfont mbr-iconfont-social socicon-facebook socicon" media-simple="true"></span>
+                                <span class="mbr-iconfont mbr-iconfont-social socicon-facebook socicon"
+                                    media-simple="true"></span>
+                            </a>
+                        </div>
+                        <div class="soc-item">
+                            <a href="https://api.whatsapp.com/send?phone=+5212381090735&text=Me%20puede%20brindar%20m%C3%A1s%20informaci%C3%B3n"
+                                target="_blank">
+                                <span class="mbr-iconfont mbr-iconfont-social socicon-whatsapp socicon"
+                                    media-simple="true"></span>
                             </a>
                         </div>
                     </div>
