--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                         (Permitenos demostrarte lo que podemos hacer por tu compañía)</h3>
                 </div>
                 <div class="col-12 col-md-4"
-                    style="z-index: 200; position: absolute; left: 98%; display: inline-block;">
+                    style="z-index: 200; position: absolute; left: calc(100% - 148px ); display: flex;">
                     <a class="twitter-timeline" data-lang="es" data-width="800" data-height="550"
                         href="https://twitter.com/contahoy?ref_src=twsrc%5Etfw">Tweets by TwitterDev</a>
                     <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
